--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,6 @@
     </head>
     <body>
     	<h1>Web Sox</h1>
-        
+        <script src="/lib/socket.io-client/socket.io.js">
     </body>
 </html>
