--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,9 @@
     </head>
     <body>
     	<h1>Web Sox</h1>
-        <script src="/lib/socket.io-client/socket.io.js">
+        <script src="/lib/socket.io-client/socket.io.js"></script>
+        <script>
+            var socket = io();
+        </script>
     </body>
 </html>
