--- a/client/index.html
+++ b/client/index.html
@@ -1,16 +1,40 @@
 <!DOCTYPE html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <body>
-    	<h1>Web Sox</h1>
-        <script src="/lib/socket.io-client/socket.io.js"></script>
-        <script>
-            var socket = io();
-        </script>
-    </body>
+<html>
+<head>
+  <title>Websockets Demo</title>
+</head>
+<body>
+  <h1>Web Sox</h1>
+  <form>
+    <input type="text">
+    <input type="submit">
+  </form>
+  <ul></ul>
+  <script src="/lib/socket.io-client/socket.io.js"></script>
+  <script>
+    var form = document.querySelector('form');
+    var input = document.querySelector('input');
+    var ul = document.querySelector('ul');
+    form.addEventListener('submit', function(){
+      var text = input.value;
+      socket.emit('chatMessage', {key: text});
+      input.value = '';
+      event.preventDefault();
+    });
+    var socket = io();
+    socket.on('connect', function(obj){
+      console.log(socket.id);
+    });
+    socket.on('chatMessage', function(msg){
+      var li = generateLi(msg);
+      ul.appendChild(li);
+    });
+    function generateLi(message){
+      var li = document.createElement('li');
+      var text = document.createTextNode(message.key);
+      li.appendChild(text);
+      return li;
+    }
+  </script>
+</body>
 </html>
